# onnx2webnn

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  requirements.txt
docs/: mlgraphbuilder-migration-plan.md  operator-conversion-plan.md
scripts/: generate_onnx_opsets.py  generate_rust_op_conversion_tests.py  onnx_fixture_builders.py  onnx_ops_to_csv.py  onnx_test_builders.py  rust_model_emitter.py  upgrade_onnx_opset.py  webnn_onnx_ops.py
src/: lib.rs  main.rs
src/onnx/: builder.rs  builder_helpers.rs  constant_folding.rs  convert.rs  mod.rs  shape_inference.rs
src/onnx/ops/: activation.rs  comparison.rs  conditional.rs  conv.rs  conversion.rs  elementwise.rs  matmul.rs  misc.rs  mod.rs  normalization.rs  pad.rs  pool.rs  reduction.rs  reshape.rs  resize.rs  rnn.rs  scatter.rs  utility.rs
src/onnx/test_models/: builder.rs  mod.rs
tests/: onnx_op_tests.rs
tests/common/: mod.rs  runner.rs
tests/onnx_ops/: mod.rs
tests/onnx_ops/activation/: abs.rs  acos.rs  acosh.rs  asin.rs  asinh.rs  atan.rs  atanh.rs  ceil.rs  celu.rs  clip.rs  cos.rs  cosh.rs  elu.rs  erf.rs  exp.rs  floor.rs  gelu.rs  hard_sigmoid.rs  hard_swish.rs  identity.rs  leaky_relu.rs  log.rs  mish.rs  mod.rs  neg.rs  p_relu.rs  reciprocal.rs  relu.rs  round.rs  selu.rs  shrink.rs  sigmoid.rs  sign.rs  sin.rs  sinh.rs  softplus.rs  softsign.rs  sqrt.rs  swish.rs  tan.rs  (+2 more)
tests/onnx_ops/comparison/: equal.rs  greater.rs  greater_or_equal.rs  is_inf.rs  is_na_n.rs  less.rs  less_or_equal.rs  mod.rs
tests/onnx_ops/control_flow/: if.rs  loop.rs  mod.rs  scan.rs
(+170 files in other folders)
