[package]
name = "onnx2webnn"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "ONNX to WebNN graph conversion (uses rustnn shape inference)"

[lib]
name = "onnx2webnn"
path = "src/lib.rs"

[[bin]]
name = "onnx2webnn"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
half = "2.7.1"
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

rustnn = { path = "../rustnn", default-features = false, features = ["onnx-runtime"] }
bytemuck = "1.15"
webnn-onnx-utils = { git = "https://github.com/rustnn/webnn-onnx-utils", branch = "main" }

[dev-dependencies]
tempfile = "3.8"
ureq = { version = "2.10", default-features = false, features = ["tls"] }
